# issuedesk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dokploy.yml  docker-compose.yml
solutions/issuedesk-api/: Cargo.toml
solutions/issuedesk-api/.sqlx/: query-012f2843cb98c9e7489dfea744da0d6e94e10ae400eb4e8b09f0ec9dd627d30c.json  query-050cc51b81f3344318bc9fd751b0c00e24c5c9c859651917781659af2b2c294a.json  query-06543f16b64f944f56a1f474edca99712ff841788eb1d72147c6fde29be6dd6d.json  query-0672655c5ec6c4215686ad0dd03a38085b3ed841bafdb366fe7b0aa9c4b8b3d5.json  query-07df643ea1cf11ef558096206b2deb5f71fa04bfef8799418f0cd9ec5f62353a.json  query-0beb90513ce739cbb7de5cee60fa5aa66c861f9271d2c057165bfef7420f043f.json  query-0d6c82273284db3bda78b67316b20c6a46788b1713e49cda33517106aafb6fa5.json  query-1554bf2de19ba3ca418c6567b9d3738fdd708b9d23c8a4d3efbdce7ccdca1238.json  query-15905396e16ed0bc51decc48720776c52b7644220411e680a0716bf432ceaa88.json  query-1bac5916b541677714426c423aba284f858622172fec80b9f26fb8066e992a07.json  query-1e7725793f66edbb5e461e12b363c197dfeee57355247705d0b7ef3153aec98e.json  query-238b7b4854936ad713624c1eee38370b8c4112f3d556aa25b9c47fd466a2fa70.json  query-28430f2efba98ad766042207ae0559d43cd3358ab091616ba8b3f9d60e976d4c.json  query-28ee10906001d1574f183eb759c764bc54e26e4bac47dbfe8eda3223b93ade32.json  query-2d677962b714958424f19127af6e27fb70effa3b20ab0ae3f7d9670daeff9088.json  query-2f6c2786ca26abeade75d144ecb0579b56bddbe084554a0e1e2c5bac625e70c7.json  (+52 more)
solutions/issuedesk-api/migrations/: 0001_init.sql  (+5 more)
(+72 files in other folders)
