[package]
name = "issuedesk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "limit"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "time",
] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
jsonwebtoken = "9"
argon2 = "0.5"
validator = { version = "0.20", features = ["derive"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
dotenvy = "0.15"
mime_guess = "2"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

[profile.release]
strip = true
